tests/basic/bad/test54.pepa
% File: tests/bad/test54.pepa
% Syntax error, missing comma before rate constant
P = (a  1.0).P;
(P <> P)
